# django-project

./: pyproject.toml
mysite/mysite/: settings.py
